--- a/css/styles.css
+++ b/css/styles.css
@@ -45,23 +45,56 @@
     --on_load: 0;
     --display: block;
 
-    /* good colors */
-    /* --grass-bg: rgb(167, 221, 75); 
-    --grass-spore: #3d5b06bd; */
-
-    /* moderate colors */
-    /* --tree-bg: rgb(30, 21, 18); 
-    --tree-spore: #bcf35dbd; */
 }
 
 html {
     scroll-behavior: smooth;
   }
 
-#loader {
+aside {
     display: var(--display);
-    text-align: center;
-    width:100vh;
+}
+
+  
+
+#loader {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+}
+
+.circle {
+    height: 260px;
+    width: 260px;
+    margin: calc(var(--gutters)*2);
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutters);
+    align-items: center; 
+    justify-content: center;
+    color: var(--secondary-font-color);
+    background-color: var(--primary-font-color);
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    animation: pulse-dot 5s infinite;
+}
+
+@keyframes pulse-dot {
+    0% {
+      transform: scale(.8);
+    }
+    50% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(.8);
+    }
+  }
+
+.circle h1 {
+    margin-top: var(--gutters);
 }
 
 header {
